--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,4 +1,5 @@
 @import '@/assets/styles/dark-mode.css';
+@import '@/assets/styles/colors.css';
 
 *,
 *::before,
@@ -11,7 +12,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background-mute);
+  background: var(--color-background);
   font-family: Roboto, Ubuntu, 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
